--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,18 @@ h5 {
 p {
   font-family: 'Sligoil', monospace;
 }
+
+.overlay {
+  border: 2px solid green;
+  z-index: 10;
+  position: absolute;
+  max-width: 50px;
+  height: 84%; /* TEMPORAL FIX, SHOULD BE DYNAMIC*/
+  /* top: 0; left: 0; */
+  /* width: 100%; height: 100%; */
+  /* display: -webkit-flex; */
+  /* flex-align: center; flex-pack: center; */
+  /* display: block; */
+  /* clear: both; */
+  background: rgba(0, 0, 0, 0.3);
+}
