--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ p {
 }
 
 .overlay {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   z-index: 10;
   position: absolute;
   max-width: 50px;
@@ -42,5 +42,5 @@ p {
   /* flex-align: center; flex-pack: center; */
   /* display: block; */
   /* clear: both; */
-  background: rgba(0, 0, 0, 0.3);
+  /* background: rgba(0, 0, 0, 0.3); */
 }
