theme, style and logos

--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,23 @@
 @tailwind utilities;
 @tailwind components;
 
-@font-face {
-  font-family: 'VG5000';
-  src:
-    local('VG5000'),
-    url('/fonts/VG5000-Regular_web.woff') format('woff'),
-    url('/fonts/VG5000-Regular_web.woff2') format('woff2');
-}
+@layer base {
+  @font-face {
+    font-family: 'VG5000';
+    src:
+      local('VG5000'),
+      url('/fonts/VG5000-Regular_web.woff') format('woff'),
+      url('/fonts/VG5000-Regular_web.woff2') format('woff2');
+  }
 
-@font-face {
-  font-family: 'Sligoil';
-  src:
-    local('Sligoil'),
-    url('/fonts/Sligoil-Micro.woff') format('woff'),
-    url('/fonts/Sligoil-Micro.woff2') format('woff2');
+  @font-face {
+    font-family: 'Sligoil';
+    src:
+      local('Sligoil'),
+      url('/fonts/Sligoil-Micro.woff') format('woff'),
+      url('/fonts/Sligoil-Micro.woff2') format('woff2');
+  }
 }
-
 h1,
 h2,
 h3,
